[tool.poetry]
name = "Youtube-transcriber"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
streamlit = "^1.41.1"
youtube-transcript-api = "^0.6.3"
pytube = { git = "https://github.com/WildDIC/pytube"}
#pytube = { git = "https://github.com/Abhishek05454/pytube", branch = "patch-1" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
